--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
+---
+title: Home Test
+---
 <!DOCTYPE html>
 <html>
 
 <head>
     <meta charset="utf-8">
-    <title>Home</title>
+    <title>{{ page.title }}</title>
 </head>
 
 <body>
